# Agentify

./: README.md  TODO.md  pyproject.toml  report.md
agentify/: components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
agentify/src/: App.css  App.jsx  index.css
agentify/src/components/: agentCard.jsx  agentCardCreated.jsx  editor.jsx  taskCard.jsx  taskCardCreated.jsx
agentify/src/pages/: editor.jsx  landing.jsx
backend/: package-lock.json  package.json  server.js
src/nocode/: crew.py  main.py  test.py
src/nocode/config/: agents.yaml  tasks.yaml
