[tool.poetry]
name = "nocode"
version = "0.1.0"
description = "nocode using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }


[tool.poetry.scripts]
nocode = "nocode.main:run"
run_crew = "nocode.main:run"
train = "nocode.main:train"
replay = "nocode.main:replay"
test = "nocode.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
